Deal with bg scaling issue on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,17 @@ button {
   }
 }
 
+/* tablet only */
+
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .masthead {
+      background-size: auto 100vh;
+    }
+}
+
 /*
   * Feature Queries
 */
